# test_task_API_rep

./: .gitignore  README.md  pyproject.toml
src/test_task/: api.py  db.py
src/test_task/scripts/: run.py
test_task_VSCode/: api.py  db.py  launc_server.sh  requirements.txt  setup_venv.sh  test_post_local_file.sh
test_task_VSCode/test/: data_changed_2_strings.csv  test_post.py
tests/: data_changed_2_strings.csv  test_api.py
