[tool.poetry]
name = "test-task"
version = "0.1.0"
description = "Test task - API with file upload endpoint"
authors = ["Author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
python_files = "tests.py test_*.py *_tests.py"
